@@ -364,7 +364,37 @@ describe C::D;
                       },
                 ]
 
-            }
-	]
+            },
+		 {
+       'name' => 'GC_params',
+       'tests' => [
+         {
+           'num' => 1,
+           'pig' => q\
+register :FUNCPATH:/testudf.jar;
+A = load ':INPATH:/singlefile/fileexists' as (name:chararray);
+B = FOREACH A GENERATE org.apache.pig.test.udf.evalfunc.DumpJVMArgsUDF(name);
+dump B;
+\,
+#if no gc param is passed, parallelGC is specified (PIG-5454) by pig
+          ,'expected_out_regex' => "-XX:\\+UseParallelGC"
+         },
+         {
+           'num' => 2,
+          'pig' => q\
+set spark.executor.extraJavaOptions '-XX:+UseG1GC';
+set mapreduce.map.java.opts '-XX:+UseG1GC';
+register :FUNCPATH:/testudf.jar;
+A = load ':INPATH:/singlefile/fileexists' as (name:chararray);
+B = FOREACH A GENERATE org.apache.pig.test.udf.evalfunc.DumpJVMArgsUDF(name);
+dump B;
+\,
+#Making sure user's G1GC is still set.
+#If parallelGC is also set, jvm will fail to start
+          ,'expected_out_regex' => "-XX:\\+UseG1GC"
+         },
+      ],
+    }
+  ]
 }
 ;
